--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "elecronshop",
+  "name": "techshop",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.20",
